Release v1.2.0 — Git changes, dark mode, tests, drag-and-drop and path fixes
Features:
- Git Changes: attach git diffs (all, staged, unstaged, vs base branch) as annotated
  <codeChanges> sections in the generated XML
- Dark mode: toggle light/dark themes via Settings (ThemeManager + theme-dark.css)
- Configurable output and presets directories in Settings
- Custom output file name in Review step

Fixes:
- VSCode single-file drag-and-drop now works (multi-format dragboard fallback)
- File paths in generated XML are always full absolute paths, preventing
  collisions between identically-named files in different directories

Infrastructure:
- Extract ContextExportStrategy and DatabaseInspectorStrategy interfaces to domain layer
- Unit test suite: JUnit 5 + Mockito covering XmlContextExporter, RecursiveFileScanner,
  GenerateContextUseCase, GitDiffRunner, PresetRepository, SettingsRepository
- Updated README with full usage guide and new features